Making pepper super important

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<li>Peppers</li>
 		<li>Bananas</li>
 		<li>Sugar</li>
-		<li>Pepper</li>
+		<li><b>PEPPER</b></li>
 		<li>Spinach</li>
 	</ul>
 </body>
