Getting really exceited about sut sugar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li>Onions</li>
 		<li>Peppers</li>
 		<li>Bananas</li>
-		<li>Sugar</li>
+		<li>SUGAR</li>
 		<li><b>PEPPER</b></li>
 		<li>Spinach</li>
 	</ul>
