--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<li>Onions</li>
 		<li>Peppers</li>
 		<li>Bananas</li>
-		<li>Sugar</li>
+		<li><a href="www.google.com?q=sugar">Sugar</li>
 		<li><b>PEPPER</b></li>
 		<li>Spinach</li>
 	</ul>
